adds heavydb reference

--- a/intelisys_pract_4_db_rules.ipynb
+++ b/intelisys_pract_4_db_rules.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOztIJDgbh9aCjvwDhRURnJ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyP0dK0TjXD/juLpjPJMI5ye"
     },
     "kernelspec": {
       "name": "python3",
@@ -482,16 +481,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ant-nik/intelisys/blob/main/intelisys_pract_4_db_rules.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "# Использование базы данных в качестве машины логического вывода\n",
         "\n",
@@ -505,7 +494,9 @@
         "- как помечать обработанные факты? => любое правило это SELECT-UPDATE, помечающее факты как отработанные (???)\n",
         "- как организовать цикл вставка фактов/логический вывод?\n",
         "- как работать при отсутствии хранимых процедур? \n",
-        "- как сделать итерационную обработку продукций до обработки всех фактов?\n"
+        "- как сделать итерационную обработку продукций до обработки всех фактов?\n",
+        "\n",
+        "Для примера используется In-Memory база данных DuckDb, следует также обратить внимание на БД HeavyDb, способной ускорять выполнение запросов с помощью GPU (https://www.heavy.ai/product/heavydb).\n"
       ],
       "metadata": {
         "id": "3MChnfIn-TyP"
@@ -513,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -546,7 +537,7 @@
       "metadata": {
         "id": "z1rbMnBj-caO"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +549,7 @@
       "metadata": {
         "id": "jVfRF7JHAFUe"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -567,7 +558,7 @@
       "metadata": {
         "id": "3bKDei83ALd1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -583,7 +574,7 @@
         "id": "DcNHo3kwANlL",
         "outputId": "bb3b9e1f-7867-4711-e54c-001673a9d81c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,7 +712,7 @@
       "metadata": {
         "id": "7B03F5amMHMA"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -758,7 +749,7 @@
         "id": "CVA1wLeLMWu7",
         "outputId": "958c167b-c589-4024-a3d3-45e3a0da5d00"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -794,7 +785,7 @@
         "id": "ZQfv337YMoF1",
         "outputId": "1dbeec78-2dc6-424b-ab7c-8749af2fa7c4"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -937,7 +928,7 @@
         "id": "3UH5szQ2AHhl",
         "outputId": "2ad54c63-0da0-4fd9-f220-0c7fac5e3e8d"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1080,7 +1071,7 @@
         "id": "zk_bueBaP42_",
         "outputId": "65ec1b15-1988-42b4-88ec-d8b85a8b69af"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1227,7 +1218,7 @@
         "id": "VI5gcTFKQaTl",
         "outputId": "054f8386-e48a-47f3-9102-e7efe32fda9a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1384,7 +1375,7 @@
         "id": "dgcqe4tqS2fm",
         "outputId": "18f88233-5785-4ab9-f857-e5eff3a358e8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1541,7 +1532,7 @@
         "id": "dskBQhRDZzn-",
         "outputId": "1a63220f-0594-4b82-a13f-231f67624f5c"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1744,7 +1735,7 @@
         "id": "pzSqbTP5avEn",
         "outputId": "3f4e3f63-4e99-4d72-bd51-eb4a2387c9a8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
