fixes some typos

--- a/intelisys_pract_5_drools_planing.ipynb
+++ b/intelisys_pract_5_drools_planing.ipynb
@@ -131,7 +131,7 @@
         "  !{cmd}\n",
         "  print('')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -158,7 +158,7 @@
         "run('mkdir -p src/main/resources/org/etu/apu/intelisys/practice/ex3')\n",
         "run('mkdir -p src/main/resources/META-INF/')"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,7 +206,7 @@
       "source": [
         "## Определение элементов базы фактов\n",
         "После подготовки структуры директорий можно перейти к описанию бизнес-логики приложения.\n",
-        "Для начала лппределим модель данных, задав 5 типов фактов.\n",
+        "Для начала оппределим модель данных, задав 5 типов фактов.\n",
         "\n",
         "1. \"Part\" - базовый класс для всех деталей, обладающий характеристикой \"масса\" и \"идентификатор\". Для генерации идентификаторов используется статический член класса, инкрементируемый при создании каждой новой детали."
       ],
@@ -249,7 +249,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -295,7 +295,7 @@
         },
         "outputId": "88833c46-a371-4c39-a551-c6cc1746fbeb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -341,7 +341,7 @@
         "id": "MdkJaqEo1z_4",
         "outputId": "4125fddc-44eb-4f49-a0c9-d79c5ad88cf8"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +371,6 @@
         "\n",
         "import org.etu.apu.intelisys.practice.ex3.Part;\n",
         "import org.etu.apu.intelisys.practice.ex3.Reel;\n",
-        "import org.etu.apu.intelisys.practice.ex3.Screw;\n",
         "\n",
         "public class AggregateType1 extends Part {\n",
         "\n",
@@ -402,7 +401,7 @@
         },
         "outputId": "cdf9abd2-0016-4fef-83f8-d5b8d41c596e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,7 +452,7 @@
         "id": "yw4pr2m07F_u",
         "outputId": "387c45e2-13cd-4580-bb52-e0eb936b9207"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -471,7 +470,7 @@
         "\n",
         "Для описания правил используется DRL-синтаксис, состоящий из конструкции *rule ... when .. then*.\n",
         "\n",
-        "В части when задается шаблон поиска объектов, к которым должно применяться правило. Подходящие под шаблон объекты могут быть помечены с помощью символа \"$\" и переиспользоваться как в условиях, так и в секции then, например, для извлечения фактов из рабочей памаяти или выполнения действий.\n",
+        "В части when задается шаблон поиска объектов, к которым должно применяться правило. Подходящие под шаблон объекты могут быть помечены с помощью символа \"$\" и переиспользоваться как в условиях, так и в секции then, например, для извлечения фактов из рабочей памяти или выполнения действий.\n",
         "\n",
         "Сами шаблоны задаются путем указания прототипа в виде названия класса и набора ограничений, включающих выражение с полями.\n",
         "Например, чтобы выбрать все детали с массой > 10 грамм и < 100 грамм можно использовать следующую конструкцию.\n",
@@ -489,11 +488,11 @@
         "            + \" так как ее масса = \" + $pat.mass));\n",
         "end\n",
         "```\n",
-        "Для того, чтобы осуществить выбор не один объект, а подмножество, можно использовать конструкцию *from collect(<шаблон поиска>)*. Например, чтобы выбрать все детали типа \"болт\", используем следующую структуру.\n",
+        "Для того, чтобы осуществить выбор в правиле не одного объекта, а подмножества, можно использовать конструкцию *from collect(<шаблон поиска>)*. Например, чтобы выбрать больше 3 деталей типа \"болт\" и затем совершить над ними действие, используем следующую структуру.\n",
         "```\n",
         "rule \"Выбор всех деталей с типом Болт\"\n",
         "    when\n",
-        "        $screws: ArrayList(size >= 7) from collect(Screw()) // Используем ArrayList для накопления объектов\n",
+        "        $screws: ArrayList(size >= 3) from collect(Screw()) // Используем ArrayList для накопления объектов\n",
         "    then\n",
         "        // Если нам нужны не все объекты, а, например, только 3\n",
         "        // из них. Для этого можно удалить из рабочей области\n",
@@ -602,7 +601,7 @@
         "id": "nbhRCuE65jBr",
         "outputId": "e70f120c-8707-420f-a88b-5123a153fc5b"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -731,7 +730,7 @@
         "    }\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -750,7 +749,7 @@
       "source": [
         "## Сборка и запуск приложения\n",
         "\n",
-        "Для сборки приложения необходимо описать набор зависимостей зависимостей в виде XML-файла."
+        "Для сборки приложения необходимо описать набор зависимостей в виде XML-файла."
       ]
     },
     {
@@ -834,7 +833,7 @@
         "    </build>\n",
         "</project>"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -867,7 +866,7 @@
         "%%writefile src/main/resources/META-INF/kmodule.xml\n",
         "<kmodule xmlns=\"http://www.drools.org/xsd/kmodule\"/>"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,7 +906,7 @@
         "run('javac -version')\n",
         "run('mvn -version')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -956,7 +955,7 @@
       "source": [
         "run('mvn package spring-boot:run')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
