fix names for PDDL example

--- a/intelisys_pract_6_pddlstream.ipynb
+++ b/intelisys_pract_6_pddlstream.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMxyrbMbhnmXNxL6neZOce1"
+      "authorship_tag": "ABX9TyPmMsDQmQefIn+lwF5dQVPF"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,7 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Движок логического вывода для базы знаний на основе Planing Domain Definition Language (PDDL)\n",
+        "# Движок логического вывода для базы знаний на базе нотации PDDL (Planing Domain Definition Language)\n",
         "\n",
         "Подробнее про PDDL:\n",
         "\n",
