adds some info to PDDL example

--- a/intelisys_pract_6_pddlstream.ipynb
+++ b/intelisys_pract_6_pddlstream.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPmMsDQmQefIn+lwF5dQVPF"
+      "authorship_tag": "ABX9TyNUnZ6K0AFnJ4+Wkt8gsDoo"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,6 +24,9 @@
         "\n",
         "https://en.wikipedia.org/wiki/Planning_Domain_Definition_Language\n",
         "\n",
+        "Примеры задач\n",
+        "\n",
+        "https://github.com/AI-Planning/classical-domains\n",
         "\n",
         "Используется движок PDDLStream:\n",
         "\n",
